<resources>
    <string name="app_name">Happy Charlie</string>
    <string name="title_activity_inicio">Inicio</string>
    <string name="bienvenida">Bienvenid@</string>
    <string name="image">gif mano</string>
    <string name="tocar">Toca para continuar</string>
    <string name="salir">boton_salir</string>
    <string name="ruido">boton_ruido</string>
    <string name="musica">boton_musica</string>
    <string name="meditacion">boton_meditacion</string>
    <string name="mensajes">boton_mensajes</string>
    <string name="calculadora">boton_calculadora</string>
    <string name="title_activity_lobby">lobby</string>
    <string name="pug">Charlie</string>
    <string name="title_activity_animo">animo</string>
    <string name="iboton_atras">atras</string>
    <string name="Mns">Mensaje</string>
    <string name="B">B</string>
    <string name="Imag">Informacion</string>

</resources>
