<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".lobby"
    tools:showIn="@layout/activity_lobby">

    <ImageButton
        android:id="@+id/charlie"
        android:layout_width="411dp"
        android:layout_height="127dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="151dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="45dp"
        android:contentDescription="@string/pug"
        android:background="@android:color/transparent"
        android:onClick="cambioEmocion"
        app:layout_constraintBottom_toTopOf="@+id/btnRuido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/pug1" />
    <ImageButton
        android:id="@+id/btnRuido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="244dp"
        android:layout_marginBottom="212dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/ruido"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ruido" />

    <ImageButton
        android:id="@+id/btnMusica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="212dp"
        android:contentDescription="@string/musica"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnRuido"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/musica" />

    <ImageButton
        android:id="@+id/btnMeditacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginEnd="244dp"
        android:layout_marginBottom="102dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/meditacion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRuido"
        app:srcCompat="@drawable/meditacion" />

    <ImageButton
        android:id="@+id/btnAnimo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="102dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/mensajes"
        android:onClick="pantallaAnimo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnMeditacion"
        app:layout_constraintTop_toBottomOf="@+id/btnMusica"
        app:srcCompat="@drawable/animo" />

    <ImageButton
        android:id="@+id/btnCalculadora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginEnd="244dp"
        android:layout_marginBottom="3dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/calculadora"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMeditacion"
        app:srcCompat="@drawable/calculadora" />
</androidx.constraintlayout.widget.ConstraintLayout>